added unit tests that don't require mocks/spies

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
             <div class="container">
 
-                <h1 class="h1-title">Clojure-esq Calculator</h1>
+                <h1 class="h1-title">Clojure-esque Calculator</h1>
                 <p>Choose an operation first, then the operands</p>
                   <div class="jumbotron" id="screen"></div>
                   <div class="row">
